--- a/frontend/src/components/SpeedTyping/typingtest.css
+++ b/frontend/src/components/SpeedTyping/typingtest.css
@@ -1,6 +1,6 @@
 .typing-test {
     box-sizing: border-box;
-    min-height: 100vh;
+    min-height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,6 +11,7 @@
 .container {
     max-width: 650 px;
     margin: 5px;
+    max-height: 45vh;
     width: calc(100% - 10px);
     padding: 30px;
     border-radius: 10px;
