--- a/frontend/src/components/Quiz/engineModal.css
+++ b/frontend/src/components/Quiz/engineModal.css
@@ -1,4 +1,4 @@
-.modal {
+.modal-game {
     display: none;
     position: fixed;
     z-index: 1000; 
@@ -14,7 +14,7 @@
     display: block;
 }
 
-.modal-content {
+.modal-content-game {
     background-color: #fefefe;
     margin: 10% auto;
     padding: 0;
@@ -44,11 +44,11 @@
     display: block;
 }
 
-.close-button-div {
+.close-button-div-game {
     text-align: end;
 }
 
-.primary-button {
+.primary-button-game {
     border:none;
     background-color: #fefefe;
     width: 70px;
@@ -59,12 +59,12 @@
     border-left: 5px double #c6c6cb;
 }
 
-.primary-button:hover {
+.primary-button-game:hover {
     background-color: red;
 }
 
 @media only screen and (max-width: 600px) {
-    .modal-content {
+    .modal-content-game {
         width: 90%;
         margin: 20% auto;
     }
