--- a/frontend/src/components/Levels/levelmodals.css
+++ b/frontend/src/components/Levels/levelmodals.css
@@ -1,4 +1,4 @@
-.modal {
+.modal-form {
     display: none;
     position: fixed;
     z-index: 1000; 
@@ -14,14 +14,38 @@
     display: block;
 }
 
-.modal-content {
+.modal-content-form {
     background-color: #fefefe;
     margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
+    padding: 0;
+    border: 5px double #c6c6cb;
     width: 80%;
-    max-width: 400px;
-    border-radius: 8px;
+    max-width: 800px;
+}
+
+.outer-form-div {
+    text-align: left;
+}
+
+.outer-form-div input {
+    margin: 10px 0;
+}
+
+.outer-form-div input[type="checkbox"] {
+    display: grid;
+    place-content: center;
+    width: 2em;
+    height: 2em;
+    transition: 120ms transform ease-in-out;
+    background-color: black;
+}
+
+.outer-form-div select{
+    margin: 10px 0;
+}
+
+.outer-form-div textarea{
+    margin: 10px 0;
 }
 
 .close {
@@ -40,7 +64,7 @@
     cursor: pointer;
 }
 
-.modal-buttons {
+.modal-buttons-form {
     text-align: center;
     margin-top: 20px;
     display: flex;
@@ -50,46 +74,36 @@
     display: block;
 }
 
-.modal-buttons button {
+.modal-buttons-form button {
     padding: 10px 20px;
     margin: 0 10px;
     cursor: pointer;
-    color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 0;
     transition: background-color 0.3s ease;
 }
 
-.primary-button {
-    background-color: #007bff;
+.close-button-div-form {
+    text-align: end;
 }
 
-.primary-button:hover {
-    background-color: #0056b3;
+.primary-button-form {
+    border:none;
+    background-color: #fefefe;
+    width: 70px;
+    margin: 0;
+    font-weight: bold;
+    border-radius: 0;
+    border-bottom: 5px double #c6c6cb;
+    border-left: 5px double #c6c6cb;
 }
 
-.secondary-button {
-    background-color: #6c757d;
-}
-
-.secondary-button:hover {
-    background-color: #4b5054;
-}
-
-.error-header {
-    color:red;
-}
-
-.success-header {
-    color:green;
-}
-
-.confirmation-header {
-    color: #ffd700;
+.primary-button-form:hover {
+    background-color: red;
 }
 
 @media only screen and (max-width: 600px) {
-    .modal-content {
+    .modal-content-form {
         width: 90%;
         margin: 20% auto;
     }
