--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -113,6 +113,11 @@ li {
     left: -9999px;
 }
 
+.form-container-notes{
+    text-align: left;
+    padding-bottom: 50px;
+}
+
 .hide {
     display: none;
 }
