--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -648,12 +648,15 @@ tbody tr {
 }
 
 .training-engine-holder-div {
-    width: 50%;
+    width: 70%;
     margin: auto;
-    margin-left: 0;
     color: black;
-    max-height: 70vh;
+    max-height: 90vh;
     overflow: auto;
+}
+
+.close-training-button-div {
+    text-align: center;
 }
 
 .keyboard-div {
