--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -9,12 +9,12 @@
 html {
     font-family: "Times New Roman", Times, serif;
     font-size: 15px;
-    color: #FEFFFF;
+    color: #fff;
 }
 
 body {
     min-height: 100vh;
-    background-color: #e0e3e9;
+    background-color: #fff;
     padding: 0;
     margin: 0;
 }
@@ -44,7 +44,7 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: flex-start; 
-    background-color: #e0e3e9;
+    background-color: #fff;
 }
 
 form {
@@ -71,7 +71,7 @@ textarea {
   padding: 0.25rem;
   border-radius: 0.5rem;
   margin: 10px;
-  width: 60%;
+  width: 95%;
 }
 
 label,
@@ -107,9 +107,44 @@ li {
     left: -9999px;
 }
 
-.form-container-notes{
-    text-align: left;
-    padding-bottom: 50px;
+form.create-note {
+    position: relative;
+    width: 480px;
+    margin: 30px auto 20px auto;
+    background: #fff;
+    padding: 15px;
+    border-radius: 7px;
+    box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+
+form.create-note input,
+form.create-note textarea {
+  width: 100%;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
+}
+form.create-note textarea {
+  margin-top: 5px;
+  border-top: 1px solid rgb(196, 190, 190);
+  border-radius: 0;
+}
+form.create-note button {
+  position: absolute;
+  right: 18px;
+  bottom: -28px;
+  background: rgb(37, 167, 206);
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
 }
 
 .hide {
@@ -492,15 +527,13 @@ tbody tr {
 
 .filter-container {
     width: 100%;
+    height: 100%;
 }
 
-.filter-container-inside {
-    width: 50%;
-    margin: 0 auto;
-}
-
-.filter-container-input {
+.filter-container .filter-container-input {
     width: 100%;
+    font-size: 15px;
+    margin-top: 2px;
 }
 
 @media screen and (max-width: 768px) { 
@@ -698,7 +731,7 @@ tbody tr {
     min-height: 450px;
 }
 
-.badge-div{
+.badge-div {
     margin:20px auto;
     width: 90%;
     display: grid;
@@ -706,7 +739,59 @@ tbody tr {
     grid-template-columns: repeat(3, 1fr);
 }
 
-.badge-span{
+.badge-span {
     height: 150px;
+    overflow: auto;
     background: green;
+}
+
+.note-div {
+    margin:30px auto;
+    width: 90%;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.note-span {
+    padding: 15px;
+    border-radius: 7px;
+    box-shadow: 0 1px 5px rgb(138, 137, 137);
+    height: 200px;
+    overflow: auto;
+    background: #fff;
+}
+
+.users-list-div {
+    margin:20px auto;
+    width: 90%;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    
+}
+
+.users-list-span{
+    height: 70px;
+}
+
+.times-two {
+    grid-column: span 3;
+    text-align: left;
+}
+
+.users-list-header {
+    height: 100%;
+    text-align: left;
+}
+
+.users-list-header p {
+    margin: auto;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.admin-section {
+    color: black;
+    background-color: #fff;
 }
