--- a/frontend/src/components/Levels/levelmodals.css
+++ b/frontend/src/components/Levels/levelmodals.css
@@ -18,7 +18,6 @@
     background-color: #fefefe;
     margin: 10% auto;
     padding: 0;
-    border-radius: 10px;
     width: 80%;
     max-width: 800px;
 }
@@ -32,10 +31,10 @@
 }
 
 .outer-form-div input[type="checkbox"] {
-    display: grid;
+    display: inline;
     place-content: center;
-    width: 2em;
-    height: 2em;
+    width: 1.25em;
+    height: 1.25em;
     transition: 120ms transform ease-in-out;
     background-color: black;
 }
@@ -108,12 +107,8 @@
 }
 
 .close-button-div-form {
-    display: inline-block;
-    height: 50px;
     text-align: end;
-    width: 30%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    background-color: #3E8DA8;
 }
 
 .primary-button-form {
@@ -121,7 +116,8 @@
     background-color: #3E8DA8;
     margin: 0;
     font-weight: bold;
-    border-radius: 0 10px 0 0;
+    border-radius: 0;
+    width: 10%;
 }
 
 .primary-button-form:hover {
@@ -131,11 +127,57 @@
 .form-container form{
     width: 90%;
     margin: auto;
-    background-color: red;
 }
 
-input {
-    width: 90%;
+.form-container h2 {
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 5%;
+    text-align: start;
+}
+
+.form-container .input-field {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0px;
+}
+
+.form-container .textarea-field {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0px;
+}
+
+.form-container select {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0px;
+    background-color: #fff;
+}
+
+.create-form-button {
+    background-color: #3E8DA8;
+    color: #fff;
+}
+
+.edit-form-button {
+    background-color: #3ea888;
+    color: #fff;
+}
+
+.edit-form-button:hover {
+    background-color: #2f8067;
+}
+
+.input_form label {
+    font-family: "Poppins", sans-serif
+}
+
+.edit {
+    background-color: #3ea888;
 }
 
 @media only screen and (max-width: 600px) {
