--- a/frontend/src/components/Training/keyboard.css
+++ b/frontend/src/components/Training/keyboard.css
@@ -3,7 +3,6 @@
 figure.keyboard {
 	position: relative;
     top: 40%;
-    margin: auto;
 	width: 50%;
 	height: 305px;
 	font-family: "Duru Sans", Arial, sans-serif;
@@ -132,4 +131,10 @@ figure.keyboard .key-function.key-small-type.key-right {
     font-size: 8px;
     padding-top: 5px;
     text-align: right;
+}
+
+@media screen and (max-width: 1400px) {
+    figure.keyboard {
+        display: none;
+    }
 }
