--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -453,7 +453,7 @@ form.create-note button {
 
 .gold-button {
     background: rgb(203, 206, 37);
-    color: black;
+    color: rgb(56, 56, 56);
     border: none;
     width: 36px;
     height: 36px;
